src/objects/CommunitySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Consists of Community related URLS</description>
    <fields>
        <fullName>Answer_Like__c</fullName>
        <description>The points for answer like.</description>
        <label>Answer Like</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_Post__c</fullName>
        <description>The points For answer post</description>
        <label>Answer Post</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommuityMicrocontrollerZoneId__c</fullName>
        <description>Micro controller Zone Id</description>
        <label>CommuityMicrocontrollerZoneId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunitiesStoryZoneId__c</fullName>
        <description>Success story zone id</description>
        <label>CommunitiesStoryZoneId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityEmployeeProfileId__c</fullName>
        <label>CommunityEmployeeProfileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityLoginUrl__c</fullName>
        <description>Community Login Url</description>
        <label>CommunityLoginUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommunityRFZoneId__c</fullName>
        <description>Community RF Zone Id</description>
        <label>CommunityRFZoneId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunitySignUpUrl__c</fullName>
        <description>CommunitySignUpUrl</description>
        <label>CommunitySignUpUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommunityUserAccountId__c</fullName>
        <description>This field captures the account Id to be used during registration process for Community Users.</description>
        <label>CommunityUserAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityUserProfileId__c</fullName>
        <description>This field captures the profile Id to be used during registration process</description>
        <label>CommunityUserProfileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailVerficationLink__c</fullName>
        <label>EmailVerficationLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Idea_Post__c</fullName>
        <description>the points for idea post</description>
        <label>Idea Post</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalUserSignInUrl__c</fullName>
        <label>InternalUserSignInUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>InternalUserSignUpUrl__c</fullName>
        <label>InternalUserSignUpUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Issue_CRM_link__c</fullName>
        <description>CRM link for project issue.</description>
        <label>Project Issue CRM link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_BestReply__c</fullName>
        <description>The points For question best Reply</description>
        <label>Question BestReply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Like__c</fullName>
        <description>The points For question like</description>
        <label>Question Like</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Limit__c</fullName>
        <description>Field to dynamically change questions limit for commmunityForumQuestionListController</description>
        <label>Question Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_post__c</fullName>
        <description>The points For question Post</description>
        <label>Question post</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CommunitySettings</label>
</CustomObject>